bleu-kalecgos/app/test-nginx/test-pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: lvm-test
  namespace: default
spec:
  containers:
    - name: busybox
      image: busybox
      command: ["sh", "-c", "echo ok > /data/test && sleep 3600"]
      volumeMounts:
        - { name: vol, mountPath: /data }
  volumes:
    - name: vol
      persistentVolumeClaim:
        claimName: lvm-test
