bleu-kalecgos/app/test-nginx/test-nginx.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gw-test
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: gw-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: gw-test
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
