bleu-kalecgos/app/test-nginx/test-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: test-gw
  namespace: gw-test
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx
  namespace: gw-test
spec:
  parentRefs:
    - name: test-gw
  rules:
    - backendRefs:
        - name: nginx
          port: 80
